-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.8.0
-
None
-
-
e292f7429 (dev), 702eae97a (dev), 95d885d22 (6.8), 52b6eb8f7 (6.8), d6d7fcb36 (dev), c00cc7c31 (6.9), dc7f02107 (6.8), 78e08780c (dev), 7c8cdd403 (6.9), a69caf520 (6.8), 15e4c4706 (dev), 81ec4ccbe (6.9), bcb492653 (6.8)
- PieSlice outside (default) label underline has a fixed white color - it's not affected by labelColor and doesn't seem to have its own color property.
Minimal reproducible example:import QtQuick import QtGraphs Window { width: 640 height: 480 visible: true title: qsTr("Graphs 2D - Pie Graph") GraphsView { id: graphsView anchors.fill: parent PieSeries { id: pieSeries PieSlice { value: 1 labelColor: "red" label: "label" labelVisible: true } } } }
- PieSeries "valuesMultiplier" property has no effect. While it's difficult to say how this property would affect a pie graph, a note in the documentation regarding for which graph type this property is valid would be beneficial for documentation strictness.
Minimal reproducible example:import QtQuick import QtGraphs Window { width: 640 height: 480 visible: true title: qsTr("Graphs 2D - Pie Graph") GraphsView { id: graphsView anchors.fill: parent PieSeries { id: pieSeries NumberAnimation on valuesMultiplier { from: 0; to: 1.0; duration: 1000; easing.type: Easing.InOutQuad } PieSlice { value: 1 } } } }
- PieSeries "selectable" and "hoverable" inherited properties are present but no "selected" nor "hovered".
- PieSlice label is not affected by label related properties in GraphsTheme.
PieSlice border is not affected by "borderWidth" defined in GraphsTheme.
Minimal reproducible example:import QtQuick import QtGraphs Window { width: 640 height: 480 visible: true title: qsTr("Graphs 2D - Pie Graph") GraphsView { id: graphsView anchors.fill: parent theme: GraphsTheme { labelBackgroundVisible: true labelBackgroundColor: "yellow" labelTextColor: "red" labelFont: Qt.font({ "pixelSize" : 24, "family" : "Roboto", "weight" : Font.Medium }) borderWidth: 5 borderColors: ["red"] } PieSeries { id: pieSeries PieSlice { value: 1 labelVisible: true label: "A label" } } } }
- PieSlice detailed description in the docs missing example (despite suggesting its existence)
- PieSeries detailed description in the docs missing example (despite suggesting its existence)