Doc add missing example in detailed description

Task-number: QTBUG-131117
Pick-to: 6.8
Change-Id: If07369c57733bc6587aba9d9aab46a8ce2f9bbb1
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Alexei Cazacov <alexei.cazacov@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>